# mcu1

./: .gitignore  CMakeLists.txt
02-on-off/: .gitignore  CMakeLists.txt  main.c  main.h  on_off.py  on_off_blink.py
02-on-off/led/: led.c  led.h
02-on-off/led-task/: led-task.c  led-task.h
02-on-off/protocol-task/: protocol-task.c  protocol-task.h
mcu/01-blink/: CMakeLists.txt  main.c
src/: main.c
